--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,7 +7,8 @@
     --section-bg:#FFF5F6;
     --slider-color:#FAFAFA;
     --accent-color:#D41443;
-    --second-accent-color:#ECEBEB;
+    --button-accent-color: #C7133E;
+    --buton-second-accent-color:#ECEBEB;
     --label-color:#FFA5BA;
     --ice-cream-color:#FFB8CA;
     --ice-coffee-color:#F0D1A5;
