--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
         </a>
     </div>
        <div class="header__buttons">
-        <button type="button" class="mobile-menu__button" data-menu-button>
+        <button type="button" class="mobile-menu__button" data-menu-button="#">
             <svg class="mobile-menu__icon">
                 <use href="./images/icons/sprite.svg#icon-burger" class="mobile-menu__icon--open"></use>
                 <use href="./images/icons/sprite.svg#icon-close" class="mobile-menu__icon--close"></use>
@@ -32,7 +32,7 @@
                     </svg>
                 </button>
             <ul class="menu__list">
-                <li class="menu__item"><a href="./index.html" class="link">Home</a></li>
+                <li class="menu__item"><a href="./index.html" class="link menu__link--curent">Home</a></li>
                 <li class="menu__item"><a href="#about" class="link">About us</a></li>
                 <li class="menu__item"><a href="#about" class="link">How it’s made?</a></li>
                 <li class="menu__item"><a href="#products" class="link">Our products</a></li>
