--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
             <ul class="menu__list">
                 <li class="menu__item"><a href="./index.html" class="link menu__link--curent">Home</a></li>
                 <li class="menu__item"><a href="#about" class="link">About us</a></li>
-                <li class="menu__item"><a href="#about" class="link">How it’s made?</a></li>
+                <li class="menu__item"><a href="#how made" class="link">How it’s made?</a></li>
                 <li class="menu__item"><a href="#products" class="link">Our products</a></li>
                 <li class="menu__item"><a href="#contacts" class="link">Contact</a></li>
             </ul>
