--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -21,9 +21,7 @@
     display: block;
     padding: 0;
   }
-}
 
-.menu_wrapper.is-open {
   @media screen and (max-width: 767px) {
     @keyframes slide {
       from {
@@ -45,7 +43,6 @@
     }
   }
 }
-
 .menu {
   display: flex;
   flex-direction: column;
@@ -53,15 +50,6 @@
   @media screen and (min-width: 1280px) {
     flex-direction: row-reverse;
   }
-}
-
-.is-open {
-  display: block;
-  position: fixed;
-  z-index: 10;
-  padding-left: 20px;
-  padding-right: 20px;
-  overflow-y: scroll;
 }
 
 .is-open .mobile-menu__icon--open {
@@ -100,7 +88,15 @@
     flex-direction: row;
   }
 }
-
+.is-open {
+  display: block;
+  position: fixed;
+  height: 100vh;
+  z-index: 10;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: scroll;
+}
 .menu__item:not(:last-child) {
   margin-bottom: 13px;
 
@@ -142,8 +138,8 @@
 
 .menu__button-icon {
   margin-left: 16px;
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
 }
 
 .menu__list::before {
